Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-63579

Links with redirects aren't marked as visited

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.10
    • 5.7.1, 5.9.1, 5.11
    • WebEngine
    • None
    • Iff46c33de14c5e1a7386bd1e2860c832e24d5083

      e.g. on https://www.archlinux.org/ the "Installation guide" link in the right column turns grey after clicking, but "Mailing lists" below it doesn't, because it's a redirect.

      With Chromium, they both turn grey after being visited.

        For Gerrit Dashboard: QTBUG-63579
        # Subject Branch Project Status CR V

            davidsz Szabolcs David
            the compiler Florian Bruhin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes