Mark redirecting URLs as visited

Store the whole redirect chain of finished navigations in the database
of visited links. Chrome does the same thing, except that it implements
NavigationURLLoaderDelegate::OnRequestRedirected() for this purpose.

Task-number: QTBUG-63579
Change-Id: Iff46c33de14c5e1a7386bd1e2860c832e24d5083
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>